[tool.poetry]
name = "taste-llm"
version = "0.1.0"
description = ""
authors = ["MxShun"]
readme = "README.md"
packages = [{include = "taste_llm"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
llama-index = "0.8.5"
pypdf = "3.15.2"
nltk = "3.8.1"
openai = "0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
